# edgeAI-rust-backend

./: .env  .gitignore  .ignore  .prettierrc.json  Cargo.toml  README.md  bk_build.rs  build.rs  downloader  model_config.json  run-server.sh  run_binary.sh  sample_model_config.json
manifests/: 0.1.0-alpha.1.json  0.1.0-beta.1.json  0.1.0-beta.2.json  0.1.0-beta.3.json  Readme.md  alpha.json
public/: old-run-model.sh  run-infill-model.sh  run-model.sh
scripts/downloader/: Cargo.toml  Readme.md
scripts/downloader/src/: main.rs
src/: history.rs  main.rs  platform_variables.rs  request_type.rs  session_manager.rs  utils.rs
src/authentication/: authorization.rs
src/chats/: chat_docstring.rs  chat_explain.rs  chat_findbugs.rs  chat_infill.rs  chat_plain.rs  chat_refactor.rs  chat_struct.rs  chat_testcases.rs  chat_types.rs  history.rs  mod.rs  utils.rs
src/context/: make_context.rs  mod.rs  store_text_context.rs
src/database/: chat_db.rs  config_db.rs  db_config.rs  mod.rs  pair_programmer_db.rs  rag_db.rs
src/embeddings/: mod.rs  text_embeddings.rs
src/infill/: api.rs  mod.rs  model_process.rs  model_state_api.rs  state.rs  state_api.rs  stream_utils.rs
src/llm_stream/: handle.rs  local.rs  mod.rs  remote.rs  types.rs
src/model_state/: mod.rs  model_process.rs  model_state_api.rs  state.rs
src/pair_programmer/: agent.rs  agent_chat.rs  agent_enum.rs  agent_generate_code.rs  agent_modifycode.rs  agent_modifystep.rs  agent_native_llm.rs  agent_planner.rs  agent_rethinker.rs  agent_system_code.rs  docs.md  mod.rs  pair_programmer_api.rs  pair_programmer_types.rs  pair_programmer_utils.rs  types.rs
src/parser/: mod.rs  parse_code.rs  parser.rs
src/prompt_compression/: compress.rs  mod.rs
src/public/: old-run-model.sh  run-model.sh
src/rag/: code_rag.rs  code_rag_api.rs  mod.rs
src/rerank/: mod.rs  rerank.rs
src/similarity_index/: index.rs
src/summarization/: mod.rs  summarize.rs
src/tests/: chat_test.rs
tests/: chat_test.rs
