[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc="*"

[dependencies]
actix-web = "4"         # The main web framework
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] } # For JSON (optional)
serde_json = "1.0"       # For JSON (optional)
env_logger = "0.10"
log = "0.4"
tokio-stream = { version = "0.1", features = ["io-util"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.16"  # To use the `Lazy` pattern for Singleton
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
psutil = "3.3.0"
futures-util = "0.3"
regex = "1.5"
bytes = "1.1"   
futures = "0.3"
chrono = "0.4"
sysinfo = "0.28"
sqlite-vec = "0.1.2"
rusqlite = {version="0.31.0", features=["bundled"]}
dirs = "5.0.1"
zerocopy = "0.7.35"
rust-bert = "0.22.0"
tch = { version = "0.14.0", features = ["download-libtorch"] }
rust_tokenizers = "8.1.1"
anyhow = "1.0.89"
lazy_static = "1.5.0"
fastembed = "4.0.0"
libloading = "0.7"
tree-sitter = "0.20"
walkdir = "2.3"