[package]
name = "pyano_server"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # Ensure build.rs is called during build

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc="1.1.23"
dirs = "5.0.1"

[dependencies]
actix-web = "4"         # The main web framework
actix-cors = "0.7.0"  
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] } # For JSON (optional)
serde_json = "1.0"       # For JSON (optional)
env_logger = "0.10"
log = "0.4"
tokio-stream = { version = "0.1", features = ["io-util"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.16"  # To use the `Lazy` pattern for Singleton
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
psutil = "3.3.0"
futures-util = "0.3"
regex = "1.5"
bytes = "1.1"   
futures = "0.3"
chrono = "0.4"
sysinfo = "0.28"
sqlite-vec = "0.1.2"
rusqlite = {version="0.31.0", features=["bundled"]}
zerocopy = "0.7.35"
rust-bert = "0.23.0"
tch = { version = "0.17.0", features = ["download-libtorch"] }
rust_tokenizers = "8.1.1"
anyhow = "1.0.89"
lazy_static = "1.5.0"
fastembed = "4.0.0"
libloading = "0.7"
tree-sitter = "0.20"
faiss ="0.11.0"
tempfile = "3.12.0"
git2 = "0.19.0"
url = "2.5.2"
rand = "0.8.5"
async-trait = "0.1.83"
thiserror = "1.0.64"
async-stream = "0.3.5"
dirs = "5.0.1"

[dev-dependencies]
actix-web = "4"

